<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OptionMenuTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="option1">Act1</string>
    <string name="option2">Act2</string>
    <string name="option3">Act3</string>
    <string name="option4">Act4</string>
    <string name="option5">Act5</string>
    

</resources>