<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu1"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/option1"/>
    <item
        android:id="@+id/menu2"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/option2"/>
    <item
        android:id="@+id/menu3"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/option3"/>
    <item
        android:id="@+id/menu4"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/option4"/>
    <item
        android:id="@+id/menu5"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/option5"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>